--- a/examples/window-viewport.html
+++ b/examples/window-viewport.html
@@ -8,9 +8,9 @@
         <link href="app.css" rel="stylesheet" />
     </head>
 
-    <body ng-controller="TestCtrl" style="background: #e9e9e9; overflow: hidden;">
+    <body ng-controller="TestCtrl" viewport="window">
 
-        <ul class="viewport" viewport>
+        <ul>
             <li class="item"
                 ng-repeat="item in items track by $index"
                 viewport-enter="item.inViewport = true"
